# template

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
scripts/: build
source/: CMakeLists.txt
source/command/: CMakeLists.txt
source/command/source/: main.cc
source/component/: CMakeLists.txt
source/component/include/component/: component.h
source/component/test/: component.cc
source/settings/: CMakeLists.txt
